--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,14 +3,14 @@
     width: 100%;
   }
   
-  .App-header .header {
+  .App-header > .header {
     background-color: aqua;
     display: flex;
     justify-content: space-between;
     height: 75px;
   }
   
-  .App-header .col:nth-child(1) {
+  .App-header  .col:nth-child(1) {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -19,7 +19,7 @@
     font-size: 18px
   }
   
-  .App-header .col:nth-child(2) {
+  .App-header  .col:nth-child(2) {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -43,49 +43,55 @@
   
   .body {
     overflow: hidden;
-    display: flex;height:100vh;padding:15px;
+    display: flex;height:100vh;
   }
   
-  .body .column:nth-child(1) {
-    padding: 15px;
+  .body > .column:nth-child(1) {
     height: 100vh;
     width: 100%;
   }
-  
-  .side-bar .list-items {
+  .main-container{
+    padding:45px 0px 45px 0px
+  }
+  .side-bar > .list-items {
     list-style: none;
   }
-  
-  li Link {
+  .side-bar .doc-btn{
+    margin-left:15px
+  }
+  ul{
+    list-style: none;
+  }
+  a {
     color: blue;
-    font-size: 16px;
+    font-size: 16px;padding:5px;text-decoration: none;
   }
   
-  li Link:hover {
+  a:hover {
     color: rgb(233, 76, 115);
     font-size: 16px;
-    font-weight: bold;
+    font-weight: bold;background-color: aqua;border-radius:7px
   }
   
-  .about p {
-    font-weight: bold;
-    font-size: 25px;
-    text-align: center
-  }
-  
-  .contact p {
+  .about > p {
     font-weight: bold;
     font-size: 25px;
     text-align: center
   }
   
-  .state p {
+  .contact > p {
     font-weight: bold;
     font-size: 25px;
     text-align: center
   }
   
-  .prop p {
+  .state > p {
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center
+  }
+  
+  .prop > p {
     font-weight: bold;
     font-size: 25px;
     text-align: center
@@ -97,19 +103,12 @@
   
   }
   
-  .footer ul {
+  .footer > ul {
     list-style: none;
     display: flex;
   }
   
-  .constructor,
-  .parent-view,
-  .child-view,
-  .state,
-  .prop-validation,
-  .set-state,
-  .force-update,
-  .find-dom,
+ 
   .class-hooks,
   .use-context,
   .use-effect,
@@ -125,4 +124,16 @@
     border-radius: 7px;
     width: 100%;
     padding: 25px
+  }
+
+  .color-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .color-box{
+    padding-top:45px;
+  }
+  .server-side{
+    padding-top:45px;
   }
